<?xml version="1.0" encoding="utf-8"?>
<com.znys.view.SettingsView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/control_settings_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_setting_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_height"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:clickable="true"
                android:background="@drawable/bg_list_item_click">

                <ImageView
                    android:id="@+id/settings_image_user_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/user_icon" />

                <TextView
                    android:id="@+id/settings_text_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_toRightOf="@+id/settings_image_user_icon"
                    android:gravity="center"
                    android:text="小顽皮"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right"
                    android:background="@color/transparent" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_height"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:clickable="true"
                android:background="@drawable/bg_list_item_click">

                <ImageView
                    android:id="@+id/settings_image_user_management"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/user_management" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_toRightOf="@+id/settings_image_user_management"
                    android:gravity="center"
                    android:text="@string/settings_change_user"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right"
                    android:background="@color/transparent" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_height"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:clickable="true"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/bg_list_item_click">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:src="@drawable/add_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:gravity="center"
                    android:text="@string/settings_add_user" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_height"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_interfacing_padding"
                android:clickable="true"
                android:background="@drawable/bg_list_item_click">

                <ImageView
                    android:id="@+id/settings_image_user_toothbrush"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/brush" />

                <TextView
                    android:id="@+id/settings_text_brush_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_toRightOf="@+id/settings_image_user_toothbrush"
                    android:gravity="center"
                    android:text="小顽皮的1号牙刷"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right"
                    android:background="@color/transparent" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_height"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:clickable="true"
                android:background="@drawable/bg_list_item_click">

                <ImageView
                    android:id="@+id/settings_image_brush_management"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/brush_management" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_toRightOf="@+id/settings_image_brush_management"
                    android:gravity="center"
                    android:text="@string/settings_change_brush"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right"
                    android:background="@color/transparent" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_height"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:clickable="true"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/bg_list_item_click">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:src="@drawable/add_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:gravity="center"
                    android:text="@string/settings_add_brush" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/settings_button_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_height"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_interfacing_padding"
                android:clickable="true"
                android:background="@drawable/bg_list_item_click">

                <ImageView
                    android:id="@+id/settings_image_contact"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/contact" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_toRightOf="@+id/settings_image_contact"
                    android:gravity="center"
                    android:text="@string/settings_contact"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right"
                    android:background="@color/transparent" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_height"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:clickable="true"
                android:background="@drawable/bg_list_item_click">

                <ImageView
                    android:id="@+id/settings_image_about"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/about" />

                <TextView
                    android:id="@+id/settings_text_about"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_toRightOf="@+id/settings_image_about"
                    android:gravity="center"
                    android:text="@string/settings_about"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right"
                    android:background="@color/transparent" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/settings_button_debug"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_setting_height"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:clickable="true"
                android:background="@drawable/bg_list_item_click">

                <ImageView
                    android:id="@+id/settings_image_debug"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/debug" />

                <TextView
                    android:id="@+id/settings_text_debug"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/default_padding"
                    android:layout_toRightOf="@+id/settings_image_debug"
                    android:gravity="center"
                    android:text="@string/settings_debug"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right"
                    android:background="@color/transparent" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

        </LinearLayout>

    </ScrollView>

</com.znys.view.SettingsView>
